  the command line: COQFLAGS, COQCHKFLAGS, COQDOCFLAGS.
  COQFLAGS is now entirely separate from COQLIBS, so in custom Makefiles
  $(COQFLAGS) should be replaced by $(COQFLAGS) $(COQLIBS).

Vernacular Commands

- Removed deprecated commands Arguments Scope and Implicit Arguments
  (not the option). Use the Arguments command instead.

Tactic language

- Support for fix/cofix added in Ltac "match" and "lazymatch".

- Ltac backtraces now include trace information about tactics
  called by OCaml-defined tactics.
- Option "Ltac Debug" now applies also to terms built using Ltac functions.

Changes from 8.8+beta1 to 8.8.0
===============================

Tools

- Asynchronous proof delegation policy was fixed. Since version 8.7
  Coq was ignoring previous runs and the -async-proofs-delegation-threshold
  option did not have the expected behavior.

Tactic language

- The undocumented "nameless" forms `fix N`, `cofix N` have been
  deprecated; please use `fix/cofix ident N` to explicitely name
  hypothesis to be introduced.

Documentation

- The reference manual is now fully ported to Sphinx.

Other small deprecations and bug fixes.

Changes from 8.7.2 to 8.8+beta1
===============================

Kernel

- Support for template polymorphism for definitions was removed. May trigger
  more "universe inconsistency" errors in rare occasions.
- Fixpoints are no longer allowed on non-recursive inductive types.

Notations

- Recursive notations with the recursive pattern repeating on the
  right (e.g. "( x ; .. ; y ; z )") now supported.
- Notations with a specific level for the leftmost nonterminal,
  when printing-only, are supported.
- Notations can now refer to the syntactic category of patterns (as in
  "fun 'pat =>" or "match p with pat => ... end"). Two variants are
  available, depending on whether a single variable is considered as a
  pattern or not.
- Recursive notations now support ".." patterns with several